# browser-llm-api

./: .gitignore  AGENT_IMAGE_GUIDE.md  CLAUDE.md  LICENSE  QUICKSTART.md  README.md  _version.py  authz.py  browser-llm-api.service  browser-llm-api.service.template  client.py  gemini-api.service  gemini_bot.py  gen_asset.py  install-service.sh  login.py  login_gemini.py  mode.sh  pyproject.toml  requirements.txt  serve.sh  server.py
desktop/: README.md  browser-llm-desktop.desktop.in  browser_llm_desktop.py  install-desktop.sh  run.sh
providers/: __init__.py  base.py  chatgpt.py  gemini.py
tests/: test_authz.py  test_completion_tracker.py
webui/: index.html  widget-demo.html  widget.js
